# LLM-zoomcamp-homework

./: LLM-zoomcamp-homework.code-workspace  README.md
01/: homework.ipynb  main.py  pyproject.toml  rag_helper.py
02/: .gitignore  download.py  embedder.py  faq_vectors2.db  homework.ipynb  homework04.ipynb  main.py  pyproject.toml  tezt.py  vectors.db-shm  vectors.db-wal
02/llm-zoomcamp-hw5/: homework05.ipynb  load_logfire.py  main.py  pyproject.toml  q3_tokens.py  traces.db
